<resources>
    <string name="app_name">E-Zoo</string>
    <string name="login">login</string>
    <string name="sign_up">sign up</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="cancel">cancel</string>
    <string name="forgot_password">forgot password</string>
    <string name="your_email_here">email here</string>
    <string name="reset_password">reset password</string>
    <string name="back">back</string>
    <string name="nim">nim</string>
    <string name="name">name</string>
    <string name="email_address">email addres</string>
    <string name="phone_number">phone number</string>
    <string name="save">save</string>

    <string name="input_error_kode">Input</string>

    <string name="input_error_nama">Input name</string>
    <string name="input_error_nim_length">NIM not valid</string>
    <string name="input_error_nim">Input NIM</string>
    <string name="input_error_email">Input email</string>
    <string name="input_error_email_invalid">Input Email</string>
    <string name="input_error_password">Input password</string>
    <string name="input_error_password_length">Password not valid</string>
    <string name="input_error_phone">Input phone number</string>
    <string name="input_error_phone_invalid">Phone number not valid</string>
    <string name="registration_fail">Registration failure</string>
    <string name="textview">textview</string>
    <string name="nama">nama</string>
    <string name="todo">todo</string>
    <string name="tabel_admin_app">Admin</string>
    <string name="update">update</string>
    <string name="delete">Delete</string>
    <string name="welcome_back">welcome</string>
    <string name="user">user</string>
    <string name="menu">menu</string>
    <string name="data_pemilih">data</string>
    <string name="data_calon">data</string>
    <string name="set">set</string>
    <string name="data_admin">data</string>
    <string name="jadwal_registrasi">jadwal</string>
    <string name="jadwal_pengumuman">pengumuman</string>
    <string name="logout">logout</string>
    <string name="keluar">keluar</string>
    <string name="qr_code">qr code</string>
    <string name="sudah_registrasi">sudah</string>
    <string name="inputt_error_kode_length">Nomor Telpon tidak valid</string>
    <string name="input_error_kode_length">Nomor 12 Karakter</string>

    <array name="genres">
        <item>Rock</item>
        <item>Metal</item>
        <item>Pop</item>
        <item>Black Metal</item>
    </array>

    <array name="statusnya">
        <item>Sudah Bayar</item>
        <item>Belum Bayar</item>
    </array>



    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

</resources>
