<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    app:columnCount="2"
    app:rowCount="2"
    android:layout_margin="15dp"
    tools:context=".Admin.AdminActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/usertampil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/nama"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <FrameLayout
                android:id="@+id/button_back"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary">

                <ImageView
                    android:id="@+id/logout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimaryDark"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_keyboard_backspace_black_24dp" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/idAddAdmin"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"

                android:background="@color/colorPrimary">

                <ImageView
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_person_add_black_24dp" />
            </FrameLayout>

        </LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/tabel_admin_app"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/listViewAdmin"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>